   - ofaMySQLPeriod class is renamed to ofaMysqlExerciceMeta (todo #1278).
   - ofaOpeTemplateFrameBin: get rid of ofaSettings usage.
   - ofaPortfolioCollection class is renamed to ofaDossierCollection (todo #1264).
   - ofaPreferences: get rid of ofaSettings usage.
   - ofaRecurrent: get rid of ofaSettings usage.
   - ofaSettings: deprecate all ofa_settings_dossier_xxx() methods.
   - ofaStreamFormat: get rid of ofaSettings usage.
   - ofaTargetChooserBin: new class.
   - ofaTVBin: new ofa-tvbin-vexpand property.

-----------------------------------------------------------------------
 Version 0.62
 ============

 Released on 2016-11-09
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).
   - Plugin manager now displays the implemented DB models (todo #1241).
   - Have transactions when generating entries (todo #89).

 Bug fixes:

   - ofaITVColumnable: defines a dedicated scope (todo #1221, #1234).
   - Fix ledger closing.
   - Means of paiement page: double-click opens the properties dialog (todo #1245).

 Other changes:

   - ofaIThemeManager: renamed to ofaIPageManager (todo #1242).
   - ofaPaimeanFrameBin: is not an ofaIActioner.
   - ofaPeriodicity: remove obsoleted functions.

-----------------------------------------------------------------------
 Version 0.61
 ============

 Released on 2016-10-23
  
 New features and improvements:

   - Core DB model v33
   - Recurrent DB model v6, v7
   - ofaAccountProperties: let the user sort the archived soldes (todo #1163).
   - ofaCheckBalances, ofaCheckIntegrity: make the [Close] button the default.
   - ofaClosingParmsBin: check that operation templates are able to generate valid entries (todo #1230).
   - ofaExerciceCloseAssistant: only close the RAN ledger, do not archive accounts balances.
   - ofaGuidedInput: let the account be changed on mean of paiement selection (todo #714).