@@ -170,7 +170,6 @@ libofa_core_la_SOURCES = \
 	ofa-rate-store.c									\
 	ofa-rate-store.h									\
 	ofa-render-page.c									\
-	ofa-settings.c										\
 	ofa-stream-format.c									\
 	ofa-stream-format-bin.c								\
 	ofa-stream-format-bin.h								\
